--- a/netspec.cabal
+++ b/netspec.cabal
@@ -53,7 +53,18 @@ library
   -- other-modules:       
   
   -- Other library packages from which modules are imported.
-  build-depends: base >= 4 && < 4.6, aeson ==0.6.*
+  build-depends:
+    base >= 4 && < 4.6,
+    aeson == 0.6.*,
+    network == 2.3.*,
+    mtl == 2.0.*,
+    template-haskell == 2.7.*,
+    transformers == 0.2.*,
+    text == 0.11.*,
+    binary == 0.5.*,
+    bytestring == 0.9.*
+
+  hs-source-dirs: src
 
 source-repository head
   type:     git
