--- a/netspec.cabal
+++ b/netspec.cabal
@@ -1,5 +1,5 @@
 name:                netspec
-version:             0.1.0.0
+version:             0.2.0.0
 synopsis:            Simplify static Networking tasks
 
 homepage:            http://github.com/DanBurton/netspec
@@ -24,7 +24,10 @@ cabal-version:       >=1.8
 
 library
   exposed-modules:
-    NetSpec, NetSpec.Json, NetSpec.Text, NetSpec.ByteString
+    Network.NetSpec,
+    Network.NetSpec.Json,
+    Network.NetSpec.Text,
+    Network.NetSpec.ByteString
   build-depends:
     base >= 4 && < 4.6,
     aeson == 0.6.*,
@@ -44,4 +47,4 @@ source-repository head
 source-repository this
   type:     git
   location: git://github.com/DanBurton/netspec.git
-  tag:      netspec-0.1.0.0
+  tag:      netspec-0.2.0.0
